--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>PHP Badwords</title>
 </head>
 <body>
-    <form action="index.php" method="POST">
-        <textarea name="bad_word" cols="30" rows="10">Lorem ipsum figa sit amet consectetur adipisicing elit. Fessa velit quibusdam, in pucchiacca minus dignissimos numquam architecto debitis molestiae, corrupti soluta laudantium modi adipisci sed reiciendis ut aspernatur animi. carajo!</textarea>
-        <button type="submit">Send</button>
-    </form>
+    <form action="badwords.php" method="GET">
+        <textarea name="goodwords" placeholder="Inserisci un testo" cols="30" rows="10"></textarea>
+        <input type="text" name="badword" placeholder="Parola da censurare">
+        <button>Invia</button>
+    </form>  
 </body>
 </html>
